--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "weather-icons-react": "^1.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
