--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^6.7.1",
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
+    "lucide-react": "^0.511.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "weather-icons-react": "^1.2.0"
